css/index.css
/* ... */
.popupControls {
	position:absolute;
	bottom: -85px;
	left:0;
	min-width:630px;
	display: -webkit-flex; 
	-webkit-flex-direction: row;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.controlButton {
	-moz-border-radius: 20px; 
	-webkit-border-radius: 20px; 
	border-radius: 20px;
	font-size: 18px;
	color: #000000;
	letter-spacing: 0;
	text-align: center;
	min-width:307px;
	padding: 21px 92px 20px 92px;
}

.applyControls {
	background-color:#FFD93E;
	margin-right:16px;
}

.closeControls {
	background-color:#FFFFFF;
}

.device-name, .scenario-name {
	font-size: 14px;
	color: #333333;
	letter-spacing: 0;
	text-align: left;
	padding:0;
	margin:0;
}

.device-state {
	font-family: Arial;
	font-size: 12px;
	color: #858585;
	letter-spacing: 0.01px;
	text-align: left;
	margin:0;
}

footer {
	position: fixed;
	top:92%;
	height:64px;
	width:100%;
	padding: 22px 36px 27px 40px;
}

.footer-content {
	position:relative;
	width:100%;
}

.footerlink {
	font-size: 12px;
	color: #858585;
	letter-spacing: 0.01px;
	margin-right:20px;
}

.copyright {
	position:absolute;
	font-size: 12px;
	color: #858585;
	letter-spacing: 0.01px;
	right:36px;
	bottom:0px;
}

